Include libsodium (enable chat)

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ captures
 *.ipr
 *.iws
 /app/src/main/java/nz/mega/sdk/MegaStringMap.java
+/app/src/main/java/nz/mega/sdk/MegaTextChat.java
+/app/src/main/java/nz/mega/sdk/MegaTextChatList.java
+/app/src/main/java/nz/mega/sdk/MegaTextChatPeerList.java
