--- a/app/src/main/jni/mega/Makefile.inc
+++ b/app/src/main/jni/mega/Makefile.inc
@@ -44,6 +44,7 @@ CPP_SOURCES= sdk/src/attrmap.cpp \
     sdk/src/utils.cpp \
     sdk/src/waiterbase.cpp  \
     sdk/src/crypto/cryptopp.cpp  \
+    sdk/src/crypto/sodium.cpp  \
     sdk/src/db/sqlite.cpp  \
     sdk/src/posix/net.cpp  \
     sdk/src/posix/fs.cpp  \
