--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="mega.privacy.android.app"
     android:installLocation="auto"
     android:versionCode="66"
@@ -251,6 +252,12 @@
         <activity
             android:name="mega.privacy.android.app.lollipop.ContactPropertiesActivityLollipop"
             android:label="@string/contact_properties_activity"
+            android:launchMode="singleTop">
+        </activity>
+
+        <activity
+            android:name="mega.privacy.android.app.lollipop.AddContactActivityLollipop"
+            android:label="@string/menu_add_contact"
             android:launchMode="singleTop">
         </activity>
 
