--- a/app/src/main/jni/Makefile
+++ b/app/src/main/jni/Makefile
@@ -3,7 +3,7 @@ include Application.mk
 ##################################################
 ### SET THE PATH TO YOUR ANDROID NDK DIRECTORY ###
 ##################################################
-NDK_ROOT=$(HOME)/android-ndk
+NDK_ROOT=$(HOME)/bin/Android/android-ndk-r10e
 ##################################################
 
 NDK_BUILD=$(NDK_ROOT)/ndk-build
