Disabled smb in the compilation of cURL

--- a/app/src/main/jni/Makefile
+++ b/app/src/main/jni/Makefile
@@ -30,7 +30,7 @@ SQLITE_VERIFIED_SOURCES=$(SQLITE)/$(SQLITE_SOURCE_FILE)_verified
 CURL=curl
 CURL_VERSION=7.48.0
 C_ARES_VERSION=1.11.0
-CURL_EXTRA=--disable-ftp --disable-file --disable-ldap --disable-ldaps --disable-rtsp --disable-proxy --disable-dict --disable-telnet --disable-tftp --disable-pop3 --disable-imap --disable-smtp --disable-gopher --disable-sspi
+CURL_EXTRA=--disable-smb --disable-ftp --disable-file --disable-ldap --disable-ldaps --disable-rtsp --disable-proxy --disable-dict --disable-telnet --disable-tftp --disable-pop3 --disable-imap --disable-smtp --disable-gopher --disable-sspi
 CURL_SOURCE_FILE=curl-$(CURL_VERSION).tar.gz
 CURL_SOURCE_FOLDER=curl-$(CURL_VERSION)
 CURL_CONFIGURED=$(CURL)/$(CURL_SOURCE_FOLDER)/curl-config
