--- a/app/src/main/java/nz/mega/sdk/.gitignore
+++ b/app/src/main/java/nz/mega/sdk/.gitignore
@@ -40,3 +40,19 @@
 /MegaContactRequestList.java
 /MegaInputStream.java
 /MegaStringList.java
+
+/MegaChatApi.java
+/MegaChatCall.java
+/MegaChatCallListener.java
+/MegaChatError.java
+/MegaChatListener.java
+/MegaChatPeerList.java
+/MegaChatRequest.java
+/MegaChatRequestListener.java
+/MegaChatRoom.java
+/MegaChatRoomList.java
+/MegaChatVideoListener.java
+/MegaChatListItem.java
+/megachat.java
+/megachatJNI.java
+
