Solve several issues

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ captures
 /app/src/main/java/nz/mega/sdk/MegaTextChat.java
 /app/src/main/java/nz/mega/sdk/MegaTextChatList.java
 /app/src/main/java/nz/mega/sdk/MegaTextChatPeerList.java
+/app/src/main/java/nz/mega/sdk/MegaChatMessage.java
+/app/src/main/java/nz/mega/sdk/MegaChatRoomListener.java
