--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ captures
 /app/src/main/java/nz/mega/sdk/MegaTextChatPeerList.java
 /app/src/main/java/nz/mega/sdk/MegaChatMessage.java
 /app/src/main/java/nz/mega/sdk/MegaChatRoomListener.java
+/app/src/main/java/nz/mega/sdk/MegaChatLogger.java
