--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -368,6 +368,16 @@
         </activity>
 
         <activity
+            android:name="mega.privacy.android.app.lollipop.AddContactActivityLollipop"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
+            android:name="mega.privacy.android.app.lollipop.ChatActivityLollipop"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
             android:name="mega.privacy.android.app.lollipop.PhoneContactsActivityLollipop"
             android:label="@string/app_name">
         </activity>
