--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -287,6 +287,11 @@
         </activity>
 
         <activity
+            android:name="mega.privacy.android.app.lollipop.megachat.GroupChatInfoActivityLollipop"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
             android:name="mega.privacy.android.app.lollipop.PhoneContactsActivityLollipop"
             android:label="@string/app_name">
         </activity>
