--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -277,7 +277,7 @@
         </activity>
 
         <activity
-            android:name="mega.privacy.android.app.lollipop.ChatActivityLollipop"
+            android:name="mega.privacy.android.app.lollipop.megachat.ChatActivityLollipop"
             android:label="@string/app_name">
         </activity>
 
