--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,12 +51,15 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.google.android.gms:play-services-wallet:9.4.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.google.android.gms:play-services-wallet:9.6.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.sothree.slidinguppanel:library:3.3.0'
     compile 'com.github.nirhart:parallaxscroll:1.0'
-    compile 'com.android.support:palette-v7:24.2.0'
+    compile 'com.android.support:palette-v7:24.2.1'
     compile 'io.github.rockerhieu:emojicon:1.4.1'
+    compile 'com.google.firebase:firebase-messaging:9.6.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
