--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -292,6 +292,13 @@
         </activity>
 
         <activity
+            android:name="mega.privacy.android.app.lollipop.megachat.ChatPreferencesActivity"
+            android:label="@string/contact_properties_activity"
+            android:theme="@style/Theme.Megaactionbar"
+            android:launchMode="singleTop">
+        </activity>
+
+        <activity
             android:name="mega.privacy.android.app.lollipop.PhoneContactsActivityLollipop"
             android:label="@string/app_name">
         </activity>
