--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ captures
 /app/src/main/java/nz/mega/sdk/MegaChatRoomListener.java
 /app/src/main/java/nz/mega/sdk/MegaChatLogger.java
 /app/src/main/java/nz/mega/sdk/MegaChatListItemList.java
+/app/src/main/java/nz/mega/sdk/MegaTransferData.java
