--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,7 +269,7 @@
         </activity>
 
         <activity
-            android:name="mega.privacy.android.app.lollipop.megachat.ContactInfoActivityLollipop"
+            android:name="mega.privacy.android.app.lollipop.ContactInfoActivityLollipop"
             android:label="@string/app_name">
         </activity>
 
