commitNow instead of commit (in Develop)

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ captures
 /app/src/main/java/nz/mega/sdk/MegaTextChat.java
 /app/src/main/java/nz/mega/sdk/MegaTextChatList.java
 /app/src/main/java/nz/mega/sdk/MegaTextChatPeerList.java
+/app/src/main/java/nz/mega/sdk/MegaTransferData.java
