--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "mega.privacy.android.app"
         minSdkVersion 11
         targetSdkVersion 25
-        versionCode 106
-        versionName "3.1.alpha.3"
+        versionCode 107
+        versionName "3.1.alpha"
     }
 
     sourceSets.main {
