--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mega.privacy.android.app"
     android:installLocation="auto"
-    android:versionCode="106"
-    android:versionName="3.1.alpha.3" >
+    android:versionCode="107"
+    android:versionName="3.1.alpha" >
 
     <uses-sdk
         android:minSdkVersion="11"
