--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "mega.privacy.android.app"
         minSdkVersion 11
         targetSdkVersion 25
-        versionCode 107
-        versionName "3.1.alpha"
+        versionCode 108
+        versionName "3.1.alpha.1"
     }
 
     sourceSets.main {
