--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
     }
 
     tasks.withType(JavaCompile) {
-        compileTask -> compileTask.dependsOn megaSDK
+        //compileTask -> compileTask.dependsOn megaSDK
     }
 
     task cleanMegaSDK(type: Exec, description: 'Clean MEGA SDK object files') {
