--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="mega.privacy.android.app"
     android:installLocation="auto"
     android:versionCode="102"
-    android:versionName="3.0.12.3" >
+    android:versionName="3.0.12.3">
 
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="23" />
 
+
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.screen.portrait" android:required="false" />
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+    <uses-feature android:name="android.hardware.fingerprint" android:required="false" />
     
     <supports-screens android:resizeable="true"
               android:smallScreens="true"
@@ -28,13 +31,14 @@
     <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
         
     <application
         android:name="MegaApplication"
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Megaactionbar" >
+        android:theme="@style/Theme.Megaactionbar">
         
         <meta-data android:name="com.google.android.gms.version"
         	android:value="@integer/google_play_services_version" />
