Task #6248 - [CHAT]Invalidate cache only after update from version 108 or lower

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ captures
 /app/src/main/java/nz/mega/sdk/MegaChatLogger.java
 /app/src/main/java/nz/mega/sdk/MegaChatListItemList.java
 /app/src/main/java/nz/mega/sdk/MegaTransferData.java
+/app/src/main/java/nz/mega/sdk/MegaEvent.java
