--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -274,6 +274,11 @@
         </activity>
 
         <activity
+            android:name="mega.privacy.android.app.lollipop.FileInfoActivityLollipop"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
             android:name="mega.privacy.android.app.lollipop.megachat.GroupChatInfoActivityLollipop"
             android:label="@string/app_name">
         </activity>
