--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ captures
 /app/src/main/java/nz/mega/sdk/MegaChatListItemList.java
 /app/src/main/java/nz/mega/sdk/MegaTransferData.java
 /app/src/main/java/nz/mega/sdk/MegaEvent.java
+/app/src/main/java/nz/mega/sdk/MegaChatPresenceConfig.java
