--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "mega.privacy.android.app"
         minSdkVersion 11
         targetSdkVersion 25
-        versionCode 125
-        versionName "3.1.alpha.5"
+        versionCode 128
+        versionName "3.1.1 (128)"
     }
 
     sourceSets.main {
