Bug #6658 - Notification is not showing progress during the download of a full folder link

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ captures
 /app/src/main/java/nz/mega/sdk/MegaTransferData.java
 /app/src/main/java/nz/mega/sdk/MegaEvent.java
 /app/src/main/java/nz/mega/sdk/MegaChatPresenceConfig.java
+/app/src/main/java/nz/mega/sdk/MegaChatHandleList.java
